--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,16 @@ LDAP_SERVER="my.ldap.server"
 LDAP_PORT=389
 LDAP_USE_SSL=False
 
-LDAP_BIND_USER=admin@my.ldap
-LDAP_BIND_PASSWORD=12345678
+LDAP_BIND_USER="admin@my.ldap"
+LDAP_BIND_PASSWORD="12345678"
 
-LDAP_USER_BASE=DC=my,DC=ldap
+LDAP_USER_BASE="DC=my,DC=ldap"
+
+LOG_DIR="logs"
+
+WEB_LISTEN_HOST="127.0.0.1"
+WEB_LISTEN_PORT=80
+
+DATABASE_PATH="sqlite3.db"
+
+SESSION_MAX_TIME=3600
