--- a/.pylintrc
+++ b/.pylintrc
@@ -2,7 +2,7 @@
 jobs=0
 
 [MESSAGES CONTROL]
-disable=missing-docstring
+disable=missing-docstring,too-few-public-methods
 
 [REPORTS]
 output-format=colorized
