--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-ldap3==2.6
-pyasn1==0.4.5
-python-dotenv==0.10.3
-cherrypy==18.1.2
-jinja2==2.10.1
+ldap3==2.9.1
+pyasn1==0.4.8
+python-dotenv==0.21.0
+CherryPy==18.8.0
+Jinja2==3.1.2
