Update example environment file

--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,11 @@ LDAP_BIND_PASSWORD="12345678"
 LDAP_USER_BASE="DC=my,DC=ldap"
 
 LOG_DIR="logs"
+LOG_FILE="app.log"
 
 WEB_LISTEN_HOST="127.0.0.1"
 WEB_LISTEN_PORT=80
+WEB_THREAD_POOL_SIZE=10
 
 DATABASE_PATH="sqlite3.db"
 
