Run rule_scheduler as a root
We need this to write into /sys/device/gpio

resolve: #26

Signed-off-by: Kostiantyn Kostiuk <kostyanf14@live.com>

--- a/rule-scheduler.service
+++ b/rule-scheduler.service
@@ -3,8 +3,8 @@
   After = network.target
 
 [Service]
-  User = arch-user
-  Group = arch-user
+  User = root
+  Group = root
   WorkingDirectory = /opt/vtl/automation
   Environment = 'LOG_LEVEL=INFO'
   Environment = 'DATABASE_PATH=sqlite3.db'
