--- a/rule-scheduler.service
+++ b/rule-scheduler.service
@@ -7,7 +7,7 @@
   Group = root
   WorkingDirectory = /opt/vtl/automation
   Environment = 'LOG_FILE=rule_scheduler.log'
-  ExecStart = '/usr/bin/env python3 /opt/vtl/automation/rule_scheduler.py'
+  ExecStart = /usr/bin/env python3.10 /opt/vtl/automation/rule_scheduler.py
   Restart = always
 
 [Install]
