--- a/mypy.ini
+++ b/mypy.ini
@@ -8,3 +8,6 @@ ignore_missing_imports = True
 
 [mypy-pystemd]
 ignore_missing_imports = True
+
+[mypy-pystemd.systemd1]
+ignore_missing_imports = True
