Update submodule URL
Signed-off-by: Kostiantyn Kostiuk <kostyanf14@live.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "app/common"]
 	path = app/common
-	url = git@github.com:vinnytsia-tl/py-common.git
+	url = https://github.com/vinnytsia-tl/py-common.git
