--- a/rule-scheduler.service
+++ b/rule-scheduler.service
@@ -8,7 +8,7 @@
   Group = root
   WorkingDirectory = /opt/vtl/automation
   Environment = 'LOG_FILE=rule_scheduler.log'
-  ExecStart = /usr/bin/env python3.10 /opt/vtl/automation/rule_scheduler.py
+  ExecStart = /opt/vtl/automation/venv/bin/python /opt/vtl/automation/rule_scheduler.py
   ExecReload = /bin/kill -HUP $MAINPID
   Restart = always
 
