Add audio file uploading

--- a/mypy.ini
+++ b/mypy.ini
@@ -3,6 +3,9 @@
 [mypy-cherrypy]
 ignore_missing_imports = True
 
+[mypy-cherrypy._cprequest]
+ignore_missing_imports = True
+
 [mypy-jc]
 ignore_missing_imports = True
 
