Add device command page

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,5 @@ SESSION_MAX_TIME=3600
 AUTOMATION_ENVIRONMENT="production"
 
 AUDIO_FOLDER = '/path/for/audio'
+
+COMMAND_SOCKET_PATH = '/path/for/audio'
